--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -3,6 +3,7 @@
     color: #fff;
     padding: 50px 0;
     text-align: center;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
